# Norma

./: CMakeLists.txt  README.MD  main.cpp
Classes/: Intepreter.cpp  Intepreter.h
src/: main.cpp
src/AuxiliarClasses/: ParsedOperation.cpp  ParsedOperation.h  Subrotine.cpp  Subrotine.h
src/Compiler/: Compiler.cpp  Compiler.h
src/Enums/: OperationTypes.h  Operations.h
src/Intepreter/: Intepreter.cpp  Intepreter.h
src/Machine/: Machine.cpp  Machine.h
